# favicorn

./: .gitignore  LICENSE  MANIFEST.in  README.md  favicorn.py  pyproject.toml  requirements.txt  test_favicorn.py
src/favicorn/: __init__.py  cli.py
tests/: test_favicorn.py
